<resources>
    <string name="app_name">MSU EXHIBITS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Buy at your comfort</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="seeds">Seeds</string>
    <string name="drinks">Drinks</string>
    <string name="products">Products</string>
    <string name="title">The Vendor</string>
    <string name="check_out">Check Out</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="pass">Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="admin_login">Login</string>
    <string name="login_register_here">Login/Register Here</string>
    <string name="product_name">Product Name</string>
    <string name="select_image_image">Select Image image</string>
    <string name="select_image">Select Image</string>
    <string name="submit">Submit</string>
    <string name="cost_in_ksh">Cost in KSH</string>
    <string name="add_to_cart">Buy</string>
    <string name="phone_number">Phone number</string>
    <string name="title_activity_drinks">DrinksActivity</string>
    <string name="title_activity_seeds">SeedsActivity</string>
    <string name="ecohim">Ecohim</string>
    <string name="physical_biological_sciences"><![CDATA[Physical & Biological sciences]]></string>
    <string name="agriculture">Agriculture</string>
    <string name="msu_logo">MSU lOGO</string>
    <string name="u00a9_2018_maseno_university">Powered by Otema Technologies © 2018</string>
    <string name="pbs"><![CDATA[Physical & Biological Sciences]]></string>
    <string name="visit_our_stand">Visit Our Stand</string>
    <string name="bio_alkanol_gel_fuel">Bio Alkanol Gel Fuel</string>
    <string name="bio_alkanol_description"><![CDATA[The Bio-alkanol gel fuel is a novel innovation which spares a thought for those rural communities to ensure that we (a) mitigate agaist deforestation at L. Victoria water catchment areas (b) tame the silent killer (smoke) in the kitchens of rural East Africans resident in the L. Victoria basin The project is designed to scale up production of/and subsequently commercialization of Bio-alkanol gel fuel as a clean, affordable, economical and renewable biofuel targeting households of communities residing around water catchment areas of Kagera  basin (Tanzania), Lake Basin (Kenya) and Kagera Sub-basin (Uganda) of Lake Victoria]]></string>
    <string name="creator">Creator</string>
    <string name="item">Item</string>
    <string name="school">School</string>
    <string name="name">Name</string>
    <string name="cost">Cost</string>
    <string name="book">Book</string>
    <string name="kisumu_hotel">Kisumu Hotel</string>
    <string name="prophiles">Exhibitors\' Profiles</string>
    <string name="francis_name">FRANCIS M. KIEMA</string>
    <string name="francis_photo">Francis\' Photo</string>
    <string name="francis_works">Francis\' Works</string>
    <string name="francis_desc">Tannins (also called tannic acid) are water soluble astringent, bitter polyphenolic compounds of high molecular weight found occurring naturally in the vacuoles or surface wax of quite a number of parts of many edible and none-edible plants. The use of tannins is depended on their chemical structure and dosage. Indigenous African vegetables Solanuum nigrum, corchorus olotorius, Amarantus hybridus and crotalaria brevidens, three grains ( Arachis hypogeae, sesanuum indicum and Eleusine coracana) and cassava roots are rich in tannins. These compounds have nutritional benefits such as reducing high blood pressure, cause acceleration of blood clotting process, modulation of immunoresponses, as an antioxidant and antimicrobial, antimutagenic and anticarcinogenic among others. Determination of beneficial factors in food crops such as tannin antioxidation and subsequent promotion of their nutritional and health values may enhance their market competitiveness, locally and internationally. For instance, in the Kenyan western region, where the studied plants (four vegetables, three grains and cassava roots) are produced for both subsistence and commercial economy, the interpretation of the results of their tannin contents may help improve the profitability at the local market and promote health.</string>
    <string name="james_name">James Odhiambo</string>
    <string name="james_profile"><![CDATA[James Odhiambo, School of Public Health & Community Development , Department of Biomedical Sciences & Technology. My exhibition is on disease vectors particularly Snails, Aedes mosquitoe and Tsetse flies.These vectors respectively are intermediate hosts of Schistosomiasis (bilharzia), yellow fever and African trypanosomiasis (sleeping sickness in human or nagana in animals). The public need to understand mode of disease transmission, signs & symptoms and measures of prevention & control. The main objective of Creating and enhancing public awareness on the above vectors is to reduce the disease burden in a community as health of a community is key when promoting innovation and technology in agriculture and trade.]]></string>
    <string name="james_photo">james Photo</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
</resources>
