<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingActivity">
        <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="307dp"
            android:layout_height="101dp"
            android:contentDescription="@string/msu_logo"
            android:scaleType="centerInside"
            android:src="@drawable/msu_logo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/text_standard"
            android:text="@string/app_name"/>
        <Button
            android:id="@+id/ecohim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/ecohim"
            android:textColor="@color/colorWhite"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/text_standard"
            />
        <Button
            android:id="@+id/agriculture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGreen"
            android:text="@string/agriculture"
            android:textColor="@color/colorWhite"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/text_standard"
            />
        <Button
            android:id="@+id/pbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/physical_biological_sciences"
            android:textColor="@color/colorWhite"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/text_standard"
            />

        <Button
            android:id="@+id/btnHotel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kisumu_hotel"
            android:textSize="@dimen/text_standard"
            android:textColor="@color/colorWhite"
            android:background="@color/colorAccent"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_margin="@dimen/activity_vertical_margin"
            />
        <Button
            android:id="@+id/stand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prophiles"
            android:textSize="@dimen/text_standard"
            android:textColor="@color/colorWhite"
            android:background="@color/colorGreen"
            android:padding="@dimen/activity_vertical_margin"
            android:layout_margin="@dimen/activity_vertical_margin"
            />
        <Button
            android:id="@+id/rights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/u00a9_2018_maseno_university"
            android:layout_gravity="bottom"
            android:gravity="bottom"/>
    </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>