<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bio_alkanol_gel_fuel"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_standard"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/bio_alkanol_gel_fuel"
                    android:padding="@dimen/activity_vertical_margin"
                    android:src="@drawable/bioalkanol" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/creator"
                    android:padding="@dimen/activity_vertical_margin"
                    android:src="@drawable/creator" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:text="@string/bio_alkanol_description"
                android:textSize="@dimen/text_standard"
                android:layout_marginStart="@dimen/activity_vertical_margin" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/prev"
                    android:textColor="@color/colorWhite"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_standard"
                    android:id="@+id/previous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:drawableLeft="@drawable/ic_arrow_back"
                    android:drawableStart="@drawable/ic_arrow_back"
                    android:enabled="true"
                    tools:enabled="true" />
            <Button
                android:background="@color/colorAccent"
                android:text="@string/next"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="@dimen/text_standard"
                android:id="@+id/next"
                android:layout_marginLeft="250dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_arrow_forward"
                android:drawableEnd="@drawable/ic_arrow_forward"
                android:gravity="end"
                android:layout_marginStart="250dp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>