<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ScrollView android:layout_height="wrap_content"
        android:layout_width="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp">
             <TableLayout
                android:id="@+id/item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/textSchoolName"
                        android:textSize="@dimen/text_standard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/school"
                        android:textColor="@color/colorBlack"
                        android:textAlignment="center"
                        android:layout_marginRight="@dimen/activity_vertical_margin"/>
                    <TextView
                        android:textSize="@dimen/text_standard"
                        android:id="@+id/textViewName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/colorBlack"
                        android:textAlignment="center"
                        android:layout_marginRight="@dimen/activity_vertical_margin"/>
                    <TextView
                        android:id="@+id/textdescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="0dp"
                        android:text="@string/cost"
                        android:textColor="@color/colorBlack"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_standard" />
                </TableRow>
            </TableLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>

</LinearLayout>