<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ScrollView android:layout_height="wrap_content"
        android:layout_width="wrap_content">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp">
            <TableLayout
                android:id="@+id/item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_standard"
                        android:id="@+id/textViewName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textAlignment="center" />
                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_vertical_margin">
                    <TextView
                        android:id="@+id/textdescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                       android:text="@string/nav_header_desc"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_standard" />
                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:id="@+id/textcost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cost_in_ksh"
                        android:textSize="@dimen/text_standard"
                        android:textAlignment="center"/>
                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/paddingsm">
                    <Button
                        android:padding="@dimen/paddingsm"
                        android:id="@+id/addToCart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_standard"
                        android:background="@color/colorGreen" />
                </TableRow>
            </TableLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</LinearLayout>