<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientLoginActivity"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/txtUname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_standard"
            android:textColor="@color/colorWhite"
            android:hint="@string/phone_number"
            android:drawableLeft="@drawable/ic_phone"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_horizontal_margin"
            android:inputType="phone"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableStart="@drawable/ic_phone" />
        <EditText
            android:id="@+id/txtPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/text_standard"
            android:textColor="@color/colorWhite"
            android:drawableLeft="@drawable/ic_lock_outline"
            android:inputType="textPassword"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableStart="@drawable/ic_lock_outline" />
        <Button
            android:id="@+id/uSignInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/sign_in"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableLeft="@drawable/ic_lock_open"
            android:drawableStart="@drawable/ic_lock_open"
            android:background="@color/colorAccent"/>
        <Button
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_horizontal_margin"
            android:id="@+id/uSignUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableLeft="@drawable/ic_person"
            android:drawableStart="@drawable/ic_person"
            android:background="@color/colorGreen"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>